Actualización: deploy limpio en Vercel y ajustes de configuración

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    {
-      "source": "/((?!.*\\.(js|css|json|png|jpg|svg|ico)).*)",
-      "destination": "/index.html"
-    }
+    { "source": "/:path*", "destination": "/index.html" }
   ]
 }
